--- a/client/index.html
+++ b/client/index.html
@@ -8,10 +8,11 @@
   
   <!-- STYLES -->
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <link rel="stylesheet" href="./styles/bootstrap.min.css">
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link href="./styles/styles.css" rel="stylesheet">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/angular.chartjs/0.7.6/angular-chart.css"/>
+  <!--<link rel="stylesheet" href="//cdn.jsdelivr.net/angular.chartjs/0.7.6/angular-chart.css"/>-->
+  <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css"/>
 
 </head>
 <body>
@@ -39,14 +40,22 @@
   <div ng-view></div>
 
   <!-- SCRIPTS -->
-  <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
+  <script src="bower_components/jQuery/dist/jquery.js"></script>  
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>  
+  <script src="bower_components/angular/angular.min.js"></script>  
+  <script src="bower_components/angular-route/angular-route.min.js"></script>  
   <script src="./lib/angular-skycons.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"type="text/javascript"></script> 
-  <script src="//cdn.jsdelivr.net/angular.chartjs/0.7.6/angular-chart.min.js" type="text/javascript"></script>
+  <script src="bower_components/angular-route/angular-route.min.js"></script>  
+  <script src="bower_components/Chart.js/Chart.min.js"></script>  
+  <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
+
+  <!--<script src="//code.jquery.com/jquery-2.2.1.min.js"></script>-->
+  <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
+  <!--<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script> -->
+  <!--<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>-->
+  <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"type="text/javascript"></script> -->
+  <!--<script src="//cdn.jsdelivr.net/angular.chartjs/0.7.6/angular-chart.min.js" type="text/javascript"></script>-->
 
   <!-- CUSTOM ANGULAR SCRIPTS -->
   <script src="./main.js"></script>
