--- a/client/index.html
+++ b/client/index.html
@@ -24,10 +24,10 @@
         </div>
         <ul class="nav navbar-nav" ng-controller="logoutController" ng-show ='isLoggedIn()'>
           <li ng-controller="logoutController" ng-show ='isLoggedIn()'>
-            <a id="navItem" href="#/">Search the Weather</a>
+            <a id="navItem" href="#/">Lookup Weather</a>
           </li>
           <li ng-controller="logoutController" ng-show='isLoggedIn()'>
-            <a id="navItem" href="#/pastSearches">Past Searches</a>
+            <a id="navItem" href="#/pastSearches">History</a>
           </li> 
           <li ng-controller="logoutController">
             <a id="navItem" href="#/login" ng-click='logout()'>Logout </a>
@@ -49,14 +49,6 @@
   <script src="bower_components/Chart.js/Chart.min.js"></script>  
   <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 
-  <!--<script src="//code.jquery.com/jquery-2.2.1.min.js"></script>-->
-  <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
-  <!--<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script> -->
-  <!--<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>-->
-  <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"type="text/javascript"></script> -->
-  <!--<script src="//cdn.jsdelivr.net/angular.chartjs/0.7.6/angular-chart.min.js" type="text/javascript"></script>-->
-
   <!-- CUSTOM ANGULAR SCRIPTS -->
   <script src="./main.js"></script>
   <script src="./services/AuthService.js"></script>
@@ -68,9 +60,5 @@
   <script src="./controllers/WeatherCtrl.js"></script>
   <script src="./directives/LoadingDir.js"></script>
   <script src="./directives/WeatherBlockDir.js"></script>
-  <!--<script src="./lib/WeatherIcon.mini.js"></script>
-  <script type="text/javascript">
-    var weathericon = WeatherIcon.add('weathericon', WeatherIcon.LIGHTRAINSUN, { mode:WeatherIcon.NIGHT, stroke:true, shadow:true, animated:true } );
-  </script>-->
 </body>
 </html>
