--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>SkyCast</title>
+  <title>National and local weather forecast</title>
   
   <!-- STYLES -->
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
